--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-tensorflow-gpu==2.4.0
-tensorflow-addons==0.12.1
-tensorboard==2.4.0
-tensorboard-plugin-profile==2.4.0
-Pillow==7.2.0
-scipy==1.4.1
-opencv-python==4.4.0.42
-pandas==1.0.1
+tensorflow==2.7.0
+tensorboard==2.7.0
+tensorboard-plugin-profile==2.5.0
+Pillow==8.4.0
+scikit-learn==1.0.1
+scipy==1.7.3
+opencv-python==4.5.4.60
+pandas==1.3.4
