--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-python==3.7.11
-tensorflow==2.7.0
-tensorflow-addons==0.15.0
-tensorboard==2.7.0
-tensorboard-plugin-profile==2.5.0
-Pillow==8.4.0
-scikit-learn==1.0.1
-scipy==1.7.3
-opencv-python==4.5.4.60
-pandas==1.3.4
+python
+tensorflow
+tensorflow-addons
+tensorboard
+tensorboard-plugin-profile
+Pillow
+scikit-learn
+scipy
+opencv-python
+pandas
